Possibly fix image overlapping issue

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -59,6 +59,7 @@ section>.row {
 }
 
 .flex-horizontal {
+    display: -ms-flexbox;
     display: flex;
     flex-direction: row;
     justify-content: center;
